ansible/nginx-ingress/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
spec:
  rules:
    - host: grafana.raspberrypi
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                name: http # To get this to work, the Grafana Service spec: ports: name: must be http. Shown below.
                  # ports:
                  # - name: http
                  #   nodePort: 32000
                  #   port: 3000
                  #   protocol: TCP
                  #   targetPort: 3000
  ingressClassName: nginx
